--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -6,10 +6,11 @@ layout: default
   <div class="wrapper">
     <aside class="sidebar">
       <nav>
-        {% for doc in site.docs %}
+        {% assign docs = site.docs | sort: 'order' %}
+        {% for doc in docs %}
           <a href="{{ doc.url }}">{{ doc.title }}</a>
           {% for section in doc.sections %}
-            <a href="{{ doc.url }}#{{ section }}" class='sub'>{{ section }}</a>
+            <a href="{{ doc.url }}#{{ section.url }}" class='sub'>{{ section.name }}</a>
           {% endfor %}
         {% endfor %}
       </nav>
