--- a/_assets/stylesheets/components/_buttons.sass
+++ b/_assets/stylesheets/components/_buttons.sass
@@ -3,7 +3,7 @@
   display: inline-block
   background: $super-purple
   font:
-    family: $font-light
+    family: $font-family
   +box-sizing
   color: $white
   +border-radius(3px)
