--- a/_assets/stylesheets/layouts/_docs.sass
+++ b/_assets/stylesheets/layouts/_docs.sass
@@ -12,7 +12,7 @@
       color: $white
       display: block
       font:
-        family: $font-light
+        family: $font-family
       line-height: 1.5rem
       text-decoration: none
       margin-top: 2rem
@@ -42,12 +42,12 @@
     h2, h3, h4
       color: $purple-opacity
       font:
-        family: $font-light
+        family: $font-family
     h1
       font:
         weight: 300
         size: 1.8rem
-        family: $font-light
+        family: $font-family
       position: relative
       top: -1px
       margin-bottom: 20px
@@ -67,7 +67,7 @@
       font:
         weight: 400
         size: 1rem
-        family: $font-light
+        family: $font-family
 
     p + h2, p + h3, ol + h3
       margin-top: 2rem
