--- a/_assets/stylesheets/main.css.sass
+++ b/_assets/stylesheets/main.css.sass
@@ -1,10 +1,8 @@
----
-# Only the main Sass file needs front matter (the dashes are enough)
----
 @charset 'utf-8'
 
 @import 'helper/colors'
 @import 'helper/variable'
+@import 'helper/functions'
 @import 'helper/mixins'
 
 @import 'base/reset'
@@ -17,3 +15,5 @@
 
 @import 'layouts/index'
 @import 'layouts/docs'
+@import 'layouts/navegation'
+@import 'layouts/about'
