--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,14 +5,9 @@
     <a class="logo" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
-
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
+      {% for social in site.networks %}
+        <a class="icon-{{ social.name }}" href="{{ social.url }}" target="_blank"></a>
+      {% endfor %}
     </nav>
 
   </div>
