--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <p>© 2015 Infiniteloops, LLC.</p>
 
       <nav class="footer-links">
-        <a href="/docs/v{{version}}/introduction.html">Docs</a>
+        <a href="/docs/v{{site.version}}/introduction.html">Docs</a>
         <a href="/about.html">About</a>
         <a href="#">Status</a>
       </nav>
