--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
 
     {% include footer.html %}
 
+    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    {% javascript typed %}
     {% javascript main %}
   </body>
 </html>
